# rfdf

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  renovate.json
.github/: prek.yml
.github/workflows/: build-test-packages-apt-ubuntu.yml  build-test-packages-nix-ubuntu.yml  prek.yml
docs/: astro.config.mjs  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/specification/: introduction.md  movement.md
rfdf_example_ros2/: CMakeLists.txt  package.xml
rfdf_example_ros2/description/: rfdf.kdl
rfdf_example_ros2/launch/: rfdf_publisher_launch.yaml
rfdf_interfaces/: CMakeLists.txt  package.xml
rfdf_interfaces/msg/: Rfdf.msg
rfdf_publisher/: Cargo.toml  package.xml
rfdf_publisher/src/: rfdf_publisher.rs
