<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rfdf_publisher</name>
  <version>0.0.0</version>
  <description>Publisher for the Robot Feature Description Format</description>
  <maintainer email="aarav@spikonado.com">Aarav Gupta</maintainer>
  <license>Apache-2.0</license>

  <depend>rclrs</depend>
  <depend>rfdf_interfaces</depend>
  <depend>rosidl_runtime_rs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
